--- a/env/help.env
+++ b/env/help.env
@@ -1,6 +1,7 @@
-echo "============= BAE =============="
-echo " lecture : open study note"
-echo "       n : run Nuke11.3v1"
-echo " djv_view: run djv view"
-echo "    cmake: run cmake"
-echo "================================"
+echo "============= BAE ================"
+echo "  lecture : open study note"
+echo "        n : run Nuke11.3v1"
+echo "  djv_view: run djv view"
+echo "     cmake: run cmake"
+echo "desktopcap: capture desktop screen"
+echo "=================================="
