--- a/env/init.env
+++ b/env/init.env
@@ -7,3 +7,4 @@ alias desktopcap="$HOME/app/ffmpeg/ffmpeg -framerate 24 -s 2560x1440 -f x11grab 
 
 export PATH=$PATH:/usr/local/DJV/bin
 export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/local/DJV/lib
+export BROWSER="google-chrome-stable"
