--- a/env/init.env
+++ b/env/init.env
@@ -7,5 +7,7 @@ alias desktopcap="$HOME/app/ffmpeg/ffmpeg -framerate 24 -s 2560x1440 -f x11grab 
 
 export PATH=$PATH:/usr/local/DJV/bin
 export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/local/DJV/lib
+# 아래 환경변수는 사용할 때 잡아서 사용한다.
+#:$HOME/app/gaffer-0.53.0.0-linux/lib
 export BROWSER="google-chrome-stable"
 export OCIO="$HOME/app/OpenColorIO-Configs/aces_1.0.3/config.ocio"
