NUKE_FONT_PATH 추가

--- a/env/init.env
+++ b/env/init.env
@@ -14,4 +14,5 @@ export OCIO="$HOME/app/OpenColorIO-Configs/aces_1.0.3/config.ocio"
 
 if [ -d "$HOME/app/nukeset" ]; then
 	export NUKE_PATH="$HOME/app/nukeset"
+	export NUKE_FONT_PATH="$NUKE_PATH/font"
 fi
